@@ -1,4 +1,5 @@
 Version 1.2.0
+Note: This release adds several new biomes and world generation options. However, I have specifically made sure that existing worlds are unaffected and as such you do not need to worry about compatibility when upgrading to this version.
 [list]
 [*]Added expanded configuration to BTA world creation. This allows selecting and deselecting biomes to include in world generation, as well as other configuration options. In addition, this allows me to add new biomes without breaking old worlds by tying the biome list to the save file. To generate any of the new biomes added in this release, you will have to create a new world.
 [*]Added the ability to replace sand generation with beta's sand and gravel beaches on world creation.
@@ -9,10 +10,10 @@ Version 1.2.0
 [*]Added grasslands as a new plains variant (villages, pumpkins).
 [*]Added siberia as a new taiga variant (wolves).
 [*]Changed skylands cloud height to render below the bottom of the world (reduced y level from 8 to -8).
-[*]Changed how tropics generates sandy shores to match valley. This may result in superficial seams in tropics shorelines, but only in the surface material, which can be easily patched if you so desire. Everything else (biomes, terrain contours, etc) will be unaffected.
+[*]Changed how tropics generates sandy shores to match valley. This does not affect existing worlds so will not cause seams.
 [*]Fixed an issue where reeds could not generate along rivers in jungles.
 [*]Fixed an issue in the create world menu where buttons would overlap on low resolution screens or at very high GUI scales.
-[*]Fixed an issue where the status of deco and biome size buttons would not be properly set when using the recreate world option.
+[*]Fixed an issue where the gui would not properly reflect world configuration when using the recreate world option.
 [/list]
 
 Version 1.1.3
